--- a/pipeline_.ipynb
+++ b/pipeline_.ipynb
@@ -184,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70478f18",
+   "metadata": {},
+   "source": [
+    "### 1. Running FastQC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "63d8f856",
@@ -221,7 +229,7 @@
    "id": "3153f37f",
    "metadata": {},
    "source": [
-    "### Trimming\n",
+    "### 2. Trimming reads\n",
     "- we have poort \"Per base sequence content\"\n",
     "- so we cut out 10 bases from the head\n",
     "\n",
@@ -265,12 +273,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fd7a4f2",
+   "cell_type": "markdown",
+   "id": "56a09de2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3. mapping reads on reference by bwa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6826ea42",
+   "metadata": {},
+   "source": [
+    "#### 3.1 indexing reference sequence"
+   ]
   },
   {
    "cell_type": "code",
@@ -391,6 +407,14 @@
    ],
    "source": [
     "ls 3_trim_out/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f6e1e35",
+   "metadata": {},
+   "source": [
+    "#### 3.2 mapping reads"
    ]
   },
   {
@@ -1511,12 +1535,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d069423b",
+   "cell_type": "markdown",
+   "id": "135ef653",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4. dealing with bam file\n",
+    "\n",
+    "- manual : http://www.htslib.org/workflow/ (see \"WGS/WES Mapping to Variant Calls - Version 1.0\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ead6af68",
+   "metadata": {},
+   "source": [
+    "#### 4.1 fixmate : clean up read pairing information and flags after bwa mapping\n",
+    "- `-O` output format\n",
+    "- `--threads` number of threads to use\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1533,21 +1569,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b82eee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "ed046aa3",
    "metadata": {},
    "source": [
-    "#### sorting\n",
-    "\n",
-    "- `-m` memory for each thread in Gb"
+    "#### 4.2 sort  reads by genome position\n",
+    "- `-O` output format\n",
+    "- `--threads` number of threads to use\n",
+    "- `-m` memory for each thread in Gb\n",
+    "- `-o` output file"
    ]
   },
   {
@@ -1575,6 +1605,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3adc61f1",
+   "metadata": {},
+   "source": [
+    "#### 4.3 indexing sorted bam\n",
+    "- `-@` number of threads to use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "fa1dd6e8",
@@ -1592,7 +1631,7 @@
    "id": "14752c5f",
    "metadata": {},
    "source": [
-    "#### bcftools varian calling\n",
+    "### 5. bcftools variant calling\n",
     "\n",
     "- `mpileup` generates genotype likelihoods\n",
     "- `call`  makes actuall calling\n",
@@ -1601,14 +1640,6 @@
     "- `-v`  output only variant sites\n",
     "- `-O`  selecting output format 'b' compressed BCF; 'u' uncompressed BCF; 'z' compressed VCF; 'v' uncompressed VCF"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "830a6ab5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1640,28 +1671,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eef3d165",
+   "cell_type": "markdown",
+   "id": "2df60e8d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 7. annotating our vcf with rs IDs from dbsnp vcf "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71b88056",
+   "metadata": {},
+   "source": [
+    "#### 7.1 compressing vcf file prior to annotation "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "4edf6658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "bgzip -c \\\n",
+    "./6_variants_annot_with_dbsnp/bgi_test.vcf > \\\n",
+    "./6_variants_annot_with_dbsnp/bgi_test.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ecb972f",
+   "metadata": {},
+   "source": [
+    "#### 7.2 indexing compressed vcf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "cfd0b650",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "tabix -p \\\n",
+    "vcf \\\n",
+    "./6_variants_annot_with_dbsnp/bgi_test.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75ecec8f",
+   "metadata": {},
+   "source": [
+    "#### 7.2 indexing dbsnp vcf "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "e45376e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash \n",
+    "tabix -p \\\n",
+    "vcf \\\n",
+    "./0_annot_dbsnp_37/GRCh37_latest_dbSNP_all.vcf.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db18cfd3",
+   "metadata": {},
+   "source": [
+    "#### 7.3 annotating our vcf with rs IDs from dbsnp\n",
+    "- `-a` file with annotations\n",
+    "- `-c` columns to take from file with annotations\n",
+    "- `-o` output file with annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "313d6e4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "bcftools annotate \\\n",
+    "-a ./0_annot_dbsnp_37/GRCh37_latest_dbSNP_all.vcf.gz \\\n",
+    "-c ID \\\n",
+    "-o ./6_variants_annot_with_dbsnp/bgi_test_annotated.vcf.gz \\\n",
+    "./6_variants_annot_with_dbsnp/bgi_test.vcf.gz"
+   ]
   },
   {
    "cell_type": "code",
@@ -1683,6 +1787,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae43ed67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f232f22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7fd7a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39731aee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce536fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3011affc",
    "metadata": {},
    "outputs": [],
    "source": []
